--- a/preview.css
+++ b/preview.css
@@ -58,12 +58,14 @@ span{
     width: 100%;
     height: 100%;
     object-fit: fill;
-    opacity: 0.3;
+    opacity: 0.5;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
-
+.top{
+    font-size: 1.5rem;
+}
 p{
   font-family: 'inter';
   color: hsla(0, 0%, 100%, 0.75);
